# General

./: .gitignore
WT_client_stage_C31/: CHANGELOG.md  README.md  RELEASE_BUILD.md  manifest.json  pyproject.toml  requirements.txt
WT_client_stage_C31/scripts/: build_pyinstaller.ps1  build_pyinstaller.sh  make_stage_zip.py
WT_client_stage_C31/tools/: run_10_turns.py
WT_client_stage_C31/wt_client/: __init__.py  __main__.py  config.json
WT_client_stage_C31/wt_client/core/: action_catalog.py  action_dispatcher.py  changelog_engine.py  config.py  content_pack.py  craft_resolver.py  db_bundle_audit.py  derived_stats.py  encounter_resolver.py  error_reporter.py  formula_engine.py  inventory_delta.py  item_catalog.py  json_canonical.py  logging_setup.py  loot_resolver.py  master_changelog.py  meter_engine.py  migrations.py  node_interactions.py  pack_smoke.py  recent_actions.py  rng_engine.py  rng_state.py  save_store.py  save_workflow.py  schema_validate.py  selector_resolver.py  support_bundle.py  turn_engine.py  turnpack_builder.py  validate_pack.py  world_node_view.py  world_resolver.py
WT_client_stage_C31/wt_client/specs/: __init__.py  master_changelog_schema.json
WT_client_stage_C31/wt_client/tests/: conftest.py  test_action_catalog_and_ui_dispatch.py  test_action_dispatcher.py  test_c34_health_migration.py  test_c35_c36_c37_min.py  test_changelog_engine_demo.py  test_content_pack_loader_dir.py  test_content_pack_loader_zip.py  test_craft_resolver_selectors.py  test_db_bundle_audit_minimal.py  test_db_bundle_audit_rc.py  test_golden_turn10.py  test_rng_engine.py  (+13 more)
(+85 files in other folders)
