[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wt-client"
version = "0.0.0"
description = "WT client skeleton (Stages C0–C5)"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.18",
]

[tool.pytest.ini_options]
testpaths = ["wt_client/tests"]
